Release jCAE 0.14.2

Wed Jul 18 13:02:59 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Avoid
	NullPointerException when jcae3d.files/nodes1dref.bin file is missing.

Thu Jul 13 13:29:40 CEST 2007 Jerome Robert <jeromerobert@users.sourforge.net>

	* src/org/jcae/mesh/Mesher.java: Try to make the main class more
	  accessible and easier to gridify (not yet finished).

Thu Jul 12 16:31:40 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java (main): Modify
	parameters so that jcae-netbeans can call DecimateHalfEdge instead of
	DecimateVertex with the same arguments.

Tue Jun 12 14:13:00 CEST 2007 Ahmed Bennani <ahmed_b@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds/MNode1D.java
	  src/org/jcae/mesh/mesher/ds/MMesh0D.java
	  src/org/jcae/mesh/mesher/ds/MMesh1D.java
	  src/org/jcae/mesh/mesher/ds/SubMesh1D.java
	Creation of a MMesh0D and a MMesh1D using the discretizations' 
	definition found in a model

Thu Jun  7 15:24:38 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject3D): Drop
	last argument, it is unused.

Thu Jun  7 12:37:38 CEST 2007 Jerome Robert <jeromerobert@users.sourforge.net>

	* src/org/jcae/mesh/xmldata/Amibe2VTK.java: Add tool to convert
	  Amibe mesh to VTK meshes

Wed Jun  6 15:13:33 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/VirtualHalfEdge.java: When OTriangle
	had been renamed into VirtualHalfEdge, latest fixes in OTriangle had
	been erroneously dropped due to merge conflicts.  Fix hasAttributes()
	nextOTriOriginLoop(), nextApexLoop() and canCollapse().

Fri Jun  1 11:39:21 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMMNode.java
	  src/org/jcae/mesh/oemm/OEMM.java: Make OEMMNode an inner class
	of OEMM, renamed into OEMM.Node.
