@@ -1,3 +1,11 @@
+Fri Jul 20 16:01:31 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/mesher/ds/MMesh1D.java: New boundaryNodes() method.
+	* src/org/jcae/mesh/amibe/algos2d/Initial.java
+	  src/org/jcae/mesh/amibe/algos2d/BasicMesh.java: Modify Initial()
+	  constructor, its 2nd argument is now a Vertex2D array instead of
+	  MMesh1D.
+
 Release jCAE 0.14.2
 
 Wed Jul 18 13:02:59 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
